[package]
name = "chip8-emulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "chip8"
path = "src/lib.rs"

[[bin]]
name = "emulator"
path = "src/bin/emulator.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35" }
rand = "0.8"